Try to fix background pattern on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,7 @@
       %3E%3C/path%3E \
     %3C/svg%3E"
   );
+  background-size: 24px;
 }
 
 @tailwind utilities;
